syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.devxijn.grpc_service.grpc.entity";
message AccountRequest{
  string id = 1;
  string userName = 2;

}
message  AccountResponse{
  string id = 1;
  string userName = 2;
}
service Account{
  rpc save(AccountRequest)returns (AccountResponse){}

  rpc findById(AccountRequest) returns (AccountResponse){}

}
